# compactum

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/compactum/: __init__.py  __main__.py  cli.py  core.py  gui.py
src/compactum/webui/: app.js  index.html  style.css
